<resources>
    <string name="app_name">My NanoDegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="button1_name">SPOTIFY STREAMER</string>
    <string name="button2_name">SCORES APP</string>
    <string name="button3_name">LIBRARY APP</string>
    <string name="button4_name">BUILD IT BIGGER</string>
    <string name="button5_name">XYZ READER</string>
    <string name="capstonebtn_name">CAPSTONE: MY OWN APP</string>
</resources>
