<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="portfolio.garikip.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="fill"
        android:layout_gravity="fill"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:id="@+id/contentMainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="fill"
            android:layout_gravity="fill"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/button1_name"
                android:textSize="@dimen/button_text_size"
                android:background="@color/buttonColor"
                android:layout_margin="5dp"
                android:id="@+id/spotifystreamerbtn"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/button2_name"
                android:textSize="@dimen/button_text_size"
                android:background="@color/buttonColor"
                android:layout_margin="5dp"
                android:id="@+id/scoresappbtn"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/button3_name"
                android:textSize="@dimen/button_text_size"
                android:background="@color/buttonColor"
                android:layout_margin="5dp"
                android:id="@+id/libraryappbtn"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/button4_name"
                android:textSize="@dimen/button_text_size"
                android:background="@color/buttonColor"
                android:layout_margin="5dp"
                android:id="@+id/bldbiggerbtn"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/button5_name"
                android:textSize="@dimen/button_text_size"
                android:background="@color/buttonColor"
                android:layout_margin="5dp"
                android:id="@+id/xyzreaderbtn"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/capstonebtn_name"
                android:textSize="@dimen/button_text_size"
                android:background="@color/colorAccent"
                android:layout_margin="5dp"
                android:id="@+id/capstonelnchrbtn"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
